{
    "name": "Controller",
    "maps": [
        {
            "name": "Mouse",
            "id": "b49a8415-5215-4ae7-914a-45988174db29",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "5d50b4ea-0a08-4cf2-8ffa-9d22eb6fc971",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "092b55db-1347-40b3-8353-eade692131ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "cb2e20ea-60e1-401b-aeac-73b4c227064b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8383064-417a-4645-931a-3c7ec0f3157f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d4310a-d167-41a7-9f3d-4c4616224870",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39ea285c-ed59-49f4-81d1-5b261b0ccc69",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyBoard",
            "id": "5d8005c2-9b35-420d-bc8d-d23e9040c311",
            "actions": [
                {
                    "name": "ShiftPressed",
                    "type": "Button",
                    "id": "f0c4997b-1779-4259-ad09-6e4a9713e7a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1b2cfab-5457-4359-838a-752174a9b59c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "ShiftPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC Strategy",
            "bindingGroup": "PC Strategy",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}